[workspace]
members=["crates/*"]
resolver="2"

[profile.wasm]
opt-level="s"
lto="thin"
codegen-units=1
panic="abort"
inherits="release"

[workspace.package]
version="0.5.0"
edition="2021"
license="MIT OR Apache-2.0"
authors=["aniwei <aniwei.studio@gmail.com>"]
repository="https://github.com/aniwei/webassembly-runtime"

[package]
name="webassembly-runtime"
publish=false
edition="2021"

[dev-dependencies]
color-eyre="0.6"
pretty_env_logger="0.5"
wat = { version="1.0" }

[profile.bench]
opt-level=3
lto="thin"
codegen-units=1
debug=true
